--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <!--begin twelvecol -->
                         <div class="twelvecol">
                             <!--begin logo -->
-                            <a href="index.html" id="logo"><img src="../homepage/lib/images/logo.svg" width="150px"
+                            <a href="index.html" id="logo"><img src="lib/images/logo.svg" width="150px"
                                     height="50px" alt="" /></a>
                             <!--end logo -->
 
