social media updates

--- a/index.html
+++ b/index.html
@@ -833,37 +833,17 @@
                     </li>
                     <li>
                         <a href="#">
-                            <i class="fa fa-pinterest contact-icon-circle"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="fa fa-github contact-icon-circle"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="fa fa-tumblr contact-icon-circle"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="fa fa-google-plus contact-icon-circle"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="fa fa-dribbble fa-1x contact-icon-circle"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="fa fa-dropbox fa-1x contact-icon-circle"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
                             <i class="fa fa-instagram fa-1x contact-icon-circle"></i>
+                        </a>
+                    </li>
+                     <li>
+                        <a href="#">
+                            <i class="fa fa-facebook fa-1x contact-icon-circle"></i>
+                        </a>
+                    </li>
+                     <li>
+                        <a href="#">
+                            <i class="fa fa-linkedin fa-1x contact-icon-circle"></i>
                         </a>
                     </li>
                 </ul>
