--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
                                     <section id="contact">
                                         <div class="contact-box">
                                             <h2>Contact</h2>
-                                            <p class="contact-lead">Interested in a joint project?</p>
-                                            <p>Write to me directly or call me – I look forward to exciting ideas!</p>
+                                            <!-- <p class="contact-lead">Interested in a joint project?</p>
+                                            <p>Write to me directly or call me – I look forward to exciting ideas!</p> -->
                                             <form class="contact-form" method="POST" action="#contact" id="contactForm">
                                                 <div class="form-item">
                                                     <label for="contact-name">Full Name</label>
