contact form changes

--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
                                 <div class="sixcol right-column">
                                     <section id="contact">
                                         <div class="contact-box">
-                                            <h2>Contact</h2>
-                                            <!-- <p class="contact-lead">Interested in a joint project?</p>
-                                            <p>Write to me directly or call me – I look forward to exciting ideas!</p> -->
+                                            <h2>Lets Discuss about Odoo</h2>
+                                            <p class="contact-lead">Help us to help you</p>
+                                            <!-- <p>Write to me directly or call me – I look forward to exciting ideas!</p> -->
                                             <form class="contact-form" method="POST" action="#contact" id="contactForm">
                                                 <div class="form-item">
                                                     <label for="contact-name">Full Name</label>
