--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                                     <a href="#container">Home</a>
                                 </li>
                                 <li>
-                                    <a href="#showcase">Courses Offered</a>
+                                    <a href="#showcase">Our Training</a>
                                 </li>
                                 <li>
                                     <a href="#services">Why Zinfog?</a>
@@ -99,9 +99,12 @@
                                 <!-- Left Column -->
                                 <div class="sixcol left-column">
                                     <div>
-                                        <span class="slider_text1">Master Odoo with Expert-Led Training – Online or In Your Office</span>
-                                        <span class="slider_text2">We want to make your Odoo training experience beautiful. You can count on our love and passion!</span>
-                                        <a href="#" class="slider_text3"><i class="fa fa-download"></i>&nbsp; Download Brochure</a>
+                                        <span class="slider_text1">Master Odoo with Expert-Led Training – Online or In
+                                            Your Office</span>
+                                        <span class="slider_text2">We want to make your Odoo training experience
+                                            beautiful. You can count on our love and passion!</span>
+                                        <a href="#" class="slider_text3"><i class="fa fa-download"></i>&nbsp; Download
+                                            Brochure</a>
                                         <a href="#" class="slider_text4">Discover more</a>
                                     </div>
                                 </div>
@@ -238,16 +241,12 @@
                             <div class="features_title_wrapper">
                                 <span class="features_number">02</span>
                                 <span class="features_separator">/</span>
-                                <span class="features_title">Courses<br />Offered</span>
+                                <span class="features_title">Our<br />Training Focus</span>
                             </div>
                             <!--end features_title_wrapper -->
 
                             <p>
-                                At Zinfog, we offer structured, hands-on Odoo training
-                                programs tailored to your role, business needs, and learning
-                                pace. Whether you’re a beginner, a developer, or a corporate
-                                team, our courses are designed to deliver practical value from
-                                day one
+                                We provide comprehensive Odoo training designed to empower your entire organization:
                             </p>
 
                             <!--begin showcase_item -->
@@ -255,12 +254,10 @@
                                 <span class="dropcaps_showcase"><i class="fa fa-umbrella"></i></span>
 
                                 <div class="text_align_left">
-                                    <h4 class="small_margins">Odoo Functional Training</h4>
+                                    <h4 class="small_margins">Real-World Use Cases:</h4>
                                     <p>
-                                        Learn how to use Odoo modules like Sales, Purchase,
-                                        Inventory, Accounting, HR, CRM, and more — from a
-                                        real-world business perspective. Ideal for end-users, team
-                                        leads, and consultants.
+                                        Training tailored to your specific business needs, focusing on practical,
+                                        real-time scenarios to maximize relevance and impact.
                                     </p>
                                 </div>
                             </div>
@@ -271,11 +268,10 @@
                                 <span class="dropcaps_showcase"><i class="fa fa-camera-retro"></i></span>
 
                                 <div class="text_align_left">
-                                    <h4 class="small_margins">Odoo Technical Training</h4>
+                                    <h4 class="small_margins">Department-Specific Functional Training:</h4>
                                     <p>
-                                        For developers looking to build custom modules, automate
-                                        workflows, and work with Odoo’s powerful framework. Covers
-                                        Python, XML, QWeb, ORM, and integration concepts.
+                                        Customized sessions for key departments such as Accounts, Sales, Purchase, and
+                                        Inventory, ensuring every team member gains the expertise they need.
                                     </p>
                                 </div>
                             </div>
@@ -285,12 +281,24 @@
                                 <span class="dropcaps_showcase"><i class="fa fa-gears"></i></span>
 
                                 <div class="text_align_left">
-                                    <h4 class="small_margins">Odoo Corporate Training</h4>
+                                    <h4 class="small_margins">Technical Training for Developers:</h4>
                                     <p>
-                                        Customized training for businesses implementing or already
-                                        using Odoo. We align the curriculum to your workflows,
-                                        departments, and industry-specific use cases — delivered
-                                        onsite or online.
+                                        Optional in-depth technical workshops for your in-house developers to master
+                                        customization, integration, and advanced Odoo functionalities.
+                                    </p>
+                                </div>
+                            </div>
+                            <!--end showcase_item -->
+                            <!--begin showcase_item -->
+                            <div class="showcase_item">
+                                <span class="dropcaps_showcase"><i class="fa fa-bar-chart-o"></i></span>
+
+                                <div class="text_align_left">
+                                    <h4 class="small_margins">Mindset Transformation:</h4>
+                                    <p>
+                                        Beyond teaching processes, we train users to think critically and solve problems
+                                        independently—shifting from simply following steps to truly understanding and
+                                        optimizing workflows.
                                     </p>
                                 </div>
                             </div>
@@ -309,11 +317,15 @@
         <!-- begin testimonials_wrapper -->
         <div class="testimonials_wrapper">
             <div class="testimonials_box bounce_fade">
-                <span class="testimonials_img"><i class="fa fa-quote-right fa-3x white"></i></span><br />
-                <span class="testimonials_text">Master Odoo with expert-led training, tailored to your team and
-                    business. Available online or at your office — practical, hands-on,
-                    and role-specific.</span>
-                <span class="testimonials_autor">- Zinfog -</span>
+                <span class="testimonials_autor">- Zinfog’s Training Approach -</span>
+                <!-- <span class="testimonials_img"><i class="fa fa-quote-right fa-3x white"></i></span><br /> -->
+                <span class="testimonials_text">Zinfog’s training is the opposite of one-size-fits-all. We tailor every
+                    session to real business use cases, making the learning highly relevant and practical. Our
+                    interactive sessions actively engage participants, ensuring they understand and apply the concepts
+                    effectively. After training, we conduct usage audits to track progress and address any challenges.
+                    Plus, our content is customized by department and role, so every team member gets exactly what they
+                    need to succeed. Typical training often misses these key elements — but at Zinfog, this approach
+                    sets us apart.</span>
             </div>
         </div>
         <!-- end testimonials_wrapper -->
@@ -570,90 +582,99 @@
         <section class="nine_section_wrapper">
             <!--begin nine_section -->
             <div class="nine_section up_fade">
+
                 <!--begin row -->
                 <div class="row">
+
                     <!--begin twelvecol -->
                     <div class="twelvecol">
+
                         <!--begin price_item -->
                         <div class="threecol price_item">
+
                             <div class="price_head">
-                                <h2>Starter</h2>
-                                <h4>₹15000<small></small></h4>
+                                <h2>Functional Training</h2>
+                                <h4>₹20,000–₹80,000</h4>
                             </div>
 
                             <ul class="price_features">
-                                <li>1 Month</li>
-                                <li>Online</li>
-                                <li>Basics + Certification Prep</li>
+                                <li>Online / Onsite</li>
+                                <li>2–6 weeks</li>
                             </ul>
 
                             <div class="price_button_wrapper">
                                 <a href="#" class="price_button">SIGN UP NOW</a>
                             </div>
+
                         </div>
                         <!--end price_item -->
 
                         <!--begin price_item -->
-                        <!-- <div class="threecol price_item">
-                <div class="price_head">
-                  <h2>Standard Pack</h2>
-                  <h4>$ 199,<small>99</small></h4>
-                </div>
-
-                <ul class="price_features">
-                  <li>10 DOMAINS</li>
-                  <li>Unlimited Pages</li>
-                  <li>1GB Storage</li>
-                  <li>100 GB TRAFFIC</li>
-                </ul>
-
-                <div class="price_button_wrapper">
-                  <a href="#" class="price_button">SIGN UP NOW</a>
-                </div>
-              </div> -->
-                        <!--end price_item -->
-
-                        <!--begin price_item -->
                         <div class="threecol price_item">
+
                             <div class="price_head">
-                                <h2>Pro</h2>
-                                <h4>₹35,000<small></small></h4>
+                                <h2>Odoo Online Kickstart</h2>
+                                <h4>₹30,000–₹60,000</h4>
                             </div>
 
                             <ul class="price_features">
-                                <li>3 Months</li>
-                                <li>Online/Offline</li>
-                                <li>Full Module Training + Project</li>
+                                <li>Online</li>
+                                <li>3 weeks</li>
                             </ul>
 
                             <div class="price_button_wrapper">
                                 <a href="#" class="price_button">SIGN UP NOW</a>
                             </div>
+
+                        </div>
+                        <!--end price_item -->
+
+                        <!--begin price_item -->
+                        <div class="threecol price_item">
+
+                            <div class="price_head">
+                                <h2>Department-Specific Training</h2>
+                                <h4>Contact Us</h4>
+                            </div>
+
+                            <ul class="price_features">
+                                <li>Online/Hybrid</li>
+                                <li>Custom</li>
+                            </ul>
+
+                            <div class="price_button_wrapper">
+                                <a href="#" class="price_button">SIGN UP NOW</a>
+                            </div>
+
                         </div>
                         <!--end price_item -->
 
                         <!--begin price_item -->
                         <div class="threecol last price_item">
+
                             <div class="price_head">
-                                <h2>Corporate</h2>
-                                <h4>Contact Us<small></small></h4>
+                                <h2>Corporate Support</h2>
+                                <h4>₹15,000/month onwards</h4>
                             </div>
 
                             <ul class="price_features">
-                                <li>Custom</li>
-                                <li>Onsite/Hybrid</li>
-                                <li>Tailored to team roles</li>
+                                <li>Ongoing</li>
+                                <li>Monthly</li>
                             </ul>
 
                             <div class="price_button_wrapper">
                                 <a href="#" class="price_button">SIGN UP NOW</a>
                             </div>
+
                         </div>
                         <!--end priceitem -->
+
                     </div>
                     <!--end twelvecol -->
+
                 </div>
                 <!--end row -->
+
             </div>
             <!--end nine_section -->
         </section>
@@ -849,11 +870,14 @@
                 <div class="footer_line"><span></span></div>
 
                 <!--begin copyright -->
-                <!-- <p class="copyright">
-                    Copyright © 2014 Fourteen. All rights reserved.<br />Designed
+                <p class="copyright">
+                    <!-- Copyright © 2014 Fourteen. All rights reserved.<br />Designed
                     &amp; developed by
-                    <a href="http://themeforest.net/user/bogdan_09/portfolio?ref=bogdan_09" target="_blank">Bogdan</a>.
-                </p> -->
+                    <a href="http://themeforest.net/user/bogdan_09/portfolio?ref=bogdan_09" target="_blank">Bogdan</a>. -->
+                    1st Floor, Sahya Govt CyberPark, <br/> GA College P.O Calicut, Kerala - 673014 <br/><br/>
+                    <a href="telto:+91 9778965493">+91 9778965493</a> <br/><br/>
+                    <a href="mailto:hello@zinfog.com">hello@zinfog.com</a>
+                </p>
                 <!--end copyright -->
             </div>
             <!--end twelvecol -->
