--- a/index.html
+++ b/index.html
@@ -600,6 +600,7 @@
                             <ul class="price_features">
                                 <li>Online / Onsite</li>
                                 <li>2–6 weeks</li>
+                                <li>Core Odoo modules training</li>
                             </ul>
 
                             <div class="price_button_wrapper">
@@ -620,6 +621,7 @@
                             <ul class="price_features">
                                 <li>Online</li>
                                 <li>3 weeks</li>
+                                <li> Focus on setup, workflows & reporting</li>
                             </ul>
 
                             <div class="price_button_wrapper">
@@ -640,6 +642,7 @@
                             <ul class="price_features">
                                 <li>Online/Hybrid</li>
                                 <li>Custom</li>
+                                <li>Tailored training for specific departments</li>
                             </ul>
 
                             <div class="price_button_wrapper">
@@ -660,6 +663,7 @@
                             <ul class="price_features">
                                 <li>Ongoing</li>
                                 <li>Monthly</li>
+                                <li>Dedicated trainer access</li>
                             </ul>
 
                             <div class="price_button_wrapper">
@@ -839,9 +843,21 @@
             <!--begin twelvecol -->
             <div class="twelvecol">
                 <!--begin footer_logo icons -->
-                <span class="footer_logo">Fourteen</span>
+                <span class="footer_logo"><img src="lib/images/logo.svg" width="150px" height="50px" alt=""></span>
                 <!--end footer_logo icons -->
+                <!--begin copyright -->
+                <p class="copyright">
+                    <!-- Copyright © 2014 Fourteen. All rights reserved.<br />Designed
+                    &amp; developed by
+                    <a href="http://themeforest.net/user/bogdan_09/portfolio?ref=bogdan_09" target="_blank">Bogdan</a>. -->
+                    1st Floor, Sahya Govt CyberPark, <br /> GA College P.O Calicut, Kerala - 673014 <br /><br />
+                    <a href="telto:+91 9778965493"><i class="fa fa-phone ms"></i>+91 9778965493</a> <br /><br />
+                    <a href="mailto:hello@zinfog.com"><i class="fa fa-envelope ms"></i>hello@zinfog.com</a>
+                </p>
+                <!--end copyright -->
 
+
+                <div class="footer_line"><span></span></div>
                 <!--begin social icons -->
                 <ul class="social">
                     <li>
@@ -866,19 +882,6 @@
                     </li>
                 </ul>
                 <!--end social icons -->
-
-                <div class="footer_line"><span></span></div>
-
-                <!--begin copyright -->
-                <p class="copyright">
-                    <!-- Copyright © 2014 Fourteen. All rights reserved.<br />Designed
-                    &amp; developed by
-                    <a href="http://themeforest.net/user/bogdan_09/portfolio?ref=bogdan_09" target="_blank">Bogdan</a>. -->
-                    1st Floor, Sahya Govt CyberPark, <br/> GA College P.O Calicut, Kerala - 673014 <br/><br/>
-                    <a href="telto:+91 9778965493">+91 9778965493</a> <br/><br/>
-                    <a href="mailto:hello@zinfog.com">hello@zinfog.com</a>
-                </p>
-                <!--end copyright -->
             </div>
             <!--end twelvecol -->
         </div>
