--- a/index.html
+++ b/index.html
@@ -103,13 +103,10 @@
                                 <!-- Left Column -->
                                 <div class="sixcol left-column">
                                     <div>
-                                        <span class="slider_text1">Master Odoo with Expert-Led Training – Online or In
-                                            Your Office</span>
-                                        <span class="slider_text2">We want to make your Odoo training experience
-                                            beautiful. You can count on our love and passion!</span>
-                                        <a href="#" class="slider_text3"><i class="fa fa-download"></i>&nbsp; Download
-                                            Brochure</a>
-                                        <a href="#" class="slider_text4">Train Your Team Now</a>
+                                        <span class="slider_text1">Unlock the Full Power of Odoo – Train Your Team with Certified Experts</span>
+                                        <span class="slider_text2">We make Odoo training simple, effective, and tailored to your team’s real needs</span>
+                                        <a href="#" class="slider_text3"><i class="fa fa-download"></i>&nbsp; Get Course Outline</a>
+                                        <a href="#pricing" class="slider_text4">Start Your Odoo Journey</a>
                                     </div>
                                 </div>
 
